[gd_scene load_steps=7 format=3 uid="uid://b3c1u8pbkagou"]

[ext_resource type="Script" uid="uid://cp35kr7k3dtgx" path="res://dialog/dialogue_panel.gd" id="1_yn4um"]
[ext_resource type="Texture2D" uid="uid://dvv4jv3mvqwv5" path="res://icon.svg" id="2_omdth"]
[ext_resource type="FontFile" uid="uid://d1nmpnkb61rls" path="res://Fonts/PixelOperatorMonoHB8.ttf" id="3_i5qgr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arn1j"]
bg_color = Color(0.35054, 0.452273, 0.59375, 1)

[sub_resource type="InputEventKey" id="InputEventKey_yn4um"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_omdth"]
events = [SubResource("InputEventKey_yn4um")]

[node name="dialogue_panel" type="Panel"]
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.7
anchor_right = 0.99
anchor_bottom = 0.979938
theme_override_styles/panel = SubResource("StyleBoxFlat_arn1j")
script = ExtResource("1_yn4um")
metadata/_edit_use_anchors_ = true

[node name="hbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_pic" type="MarginContainer" parent="hbox"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 7

[node name="picture" type="TextureRect" parent="hbox/margin_pic"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_omdth")

[node name="margin_items" type="MarginContainer" parent="hbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="vbox" type="VBoxContainer" parent="hbox/margin_items"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="label_name" type="Label" parent="hbox/margin_items/vbox"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_i5qgr")
theme_override_font_sizes/font_size = 30
text = "Nome"

[node name="vbox" type="VBoxContainer" parent="hbox/margin_items/vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ButtonNext" type="Button" parent="hbox/margin_items/vbox"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
shortcut = SubResource("Shortcut_omdth")
text = " >>> "

[connection signal="pressed" from="hbox/margin_items/vbox/ButtonNext" to="." method="_on_button_next_pressed"]
